[gd_scene load_steps=8 format=2]

[ext_resource path="res://Level/Level4.gd" type="Script" id=1]
[ext_resource path="res://Level_Objects/Door.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level_Objects/DoorVertical.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/custom_tileset.tres" type="TileSet" id=4]
[ext_resource path="res://Level_Objects/LevelExit.tscn" type="PackedScene" id=5]
[ext_resource path="res://Level_Objects/Button.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=7]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )
Player = ExtResource( 7 )

[node name="ForegroundTiles" type="TileMap" parent="."]
z_index = 5
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
collision_mask = 2
format = 1
tile_data = PoolIntArray( 393218, 5, 262146, 393221, 5, 262146, 393223, 5, 262146, 393226, 5, 262146, 393236, 5, 262146, 393239, 5, 262146, 655372, 5, 262146, 655373, 5, 262146, 655374, 5, 262146, 655375, 5, 262146, 655376, 5, 262146, 655377, 5, 262146, 655378, 5, 262146, 655379, 5, 262146, 655380, 5, 262146, 655381, 5, 262146, 655382, 5, 262146, 720898, 5, 262146, 720901, 5, 262146, 720903, 5, 262146, 720906, 5, 262146, 1048578, 5, 262146, 1048579, 5, 262146, 1048580, 5, 262146, 1048581, 5, 262146, 1048583, 5, 262146, 1048584, 5, 262146, 1048585, 5, 262146, 1048586, 5, 262146 )
__meta__ = {
"_edit_lock_": true
}

[node name="BackgroundTiles" type="TileMap" parent="."]
z_index = -5
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
collision_mask = 2
format = 1
tile_data = PoolIntArray( 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 16, 3, 0, 17, 3, 0, 18, 3, 0, 19, 3, 0, 20, 3, 0, 21, 3, 0, 22, 3, 0, 23, 3, 0, 24, 3, 0, 25, 3, 0, 26, 3, 0, 27, 3, 0, 28, 3, 0, 29, 3, 0, 30, 3, 0, 31, 3, 0, 65536, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 3, 0, 65553, 3, 0, 65554, 3, 0, 65555, 3, 0, 65556, 3, 0, 65557, 3, 0, 65558, 3, 0, 65559, 3, 0, 65560, 3, 0, 65561, 3, 0, 65562, 3, 0, 65563, 3, 0, 65564, 3, 0, 65565, 3, 0, 65566, 3, 0, 65567, 3, 0, 131072, 3, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 131087, 3, 0, 131088, 3, 0, 131089, 3, 0, 131090, 3, 0, 131091, 3, 0, 131092, 3, 0, 131093, 3, 0, 131094, 3, 0, 131095, 3, 0, 131096, 3, 0, 131097, 3, 0, 131098, 3, 0, 131099, 3, 0, 131100, 3, 0, 131101, 3, 0, 131102, 3, 0, 131103, 3, 0, 196608, 3, 0, 196609, 3, 0, 196610, 2, 131072, 196611, 2, 65538, 196612, 2, 65538, 196613, 2, 131073, 196614, 3, 0, 196615, 2, 131072, 196616, 2, 65538, 196617, 2, 65538, 196618, 2, 131073, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 3, 0, 196624, 3, 0, 196625, 3, 0, 196626, 3, 0, 196627, 3, 0, 196628, 2, 131072, 196629, 2, 65538, 196630, 2, 65538, 196631, 2, 131073, 196632, 3, 0, 196633, 3, 0, 196634, 3, 0, 196635, 3, 0, 196636, 3, 0, 196637, 3, 0, 196638, 3, 0, 196639, 3, 0, 262144, 3, 0, 262145, 3, 0, 262146, 2, 65536, 262147, 0, 0, 262148, 0, 0, 262149, 2, 2, 262150, 3, 0, 262151, 2, 65536, 262152, 0, 0, 262153, 0, 0, 262154, 4, 65536, 262155, 0, 0, 262156, 2, 65538, 262157, 2, 131073, 262158, 3, 0, 262159, 3, 0, 262160, 3, 0, 262161, 3, 0, 262162, 3, 0, 262163, 3, 0, 262164, 2, 65536, 262165, 0, 0, 262166, 0, 0, 262167, 2, 2, 262168, 3, 0, 262169, 3, 0, 262170, 3, 0, 262171, 3, 0, 262172, 3, 0, 262173, 3, 0, 262174, 3, 0, 262175, 3, 0, 327680, 3, 0, 327681, 3, 0, 327682, 2, 65536, 327683, 0, 0, 327684, 0, 0, 327685, 2, 2, 327686, 3, 0, 327687, 2, 65536, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 2, 2, 327694, 3, 0, 327695, 3, 0, 327696, 3, 0, 327697, 3, 0, 327698, 3, 0, 327699, 3, 0, 327700, 2, 65536, 327701, 0, 0, 327702, 0, 0, 327703, 2, 2, 327704, 3, 0, 327705, 3, 0, 327706, 3, 0, 327707, 3, 0, 327708, 3, 0, 327709, 3, 0, 327710, 3, 0, 327711, 3, 0, 393216, 3, 0, 393217, 3, 0, 393218, 2, 0, 393219, 4, 1, 393220, 4, 0, 393221, 2, 1, 393222, 3, 0, 393223, 2, 0, 393224, 4, 1, 393225, 4, 0, 393226, 2, 1, 393227, 3, 0, 393228, 2, 65536, 393229, 2, 2, 393230, 3, 0, 393231, 3, 0, 393232, 3, 0, 393233, 3, 0, 393234, 3, 0, 393235, 3, 0, 393236, 2, 0, 393237, 4, 1, 393238, 4, 0, 393239, 2, 1, 393240, 3, 0, 393241, 3, 0, 393242, 3, 0, 393243, 3, 0, 393244, 3, 0, 393245, 3, 0, 393246, 3, 0, 393247, 3, 0, 458752, 3, 0, 458753, 3, 0, 458754, 3, 0, 458755, 2, 65536, 458756, 2, 2, 458757, 3, 0, 458758, 3, 0, 458759, 3, 0, 458760, 0, 0, 458761, 0, 0, 458762, 3, 0, 458763, 3, 0, 458764, 2, 65536, 458765, 2, 2, 458766, 3, 0, 458767, 3, 0, 458768, 3, 0, 458769, 3, 0, 458770, 3, 0, 458771, 3, 0, 458772, 3, 0, 458773, 2, 65536, 458774, 2, 2, 458775, 3, 0, 458776, 3, 0, 458777, 3, 0, 458778, 3, 0, 458779, 3, 0, 458780, 3, 0, 458781, 3, 0, 458782, 3, 0, 458783, 3, 0, 524288, 3, 0, 524289, 3, 0, 524290, 2, 131072, 524291, 4, 65537, 524292, 4, 65536, 524293, 2, 131073, 524294, 3, 0, 524295, 2, 131072, 524296, 4, 65537, 524297, 4, 65536, 524298, 2, 131073, 524299, 3, 0, 524300, 2, 65536, 524301, 2, 2, 524302, 3, 0, 524303, 3, 0, 524304, 3, 0, 524305, 3, 0, 524306, 3, 0, 524307, 3, 0, 524308, 3, 0, 524309, 2, 65536, 524310, 2, 2, 524311, 3, 0, 524312, 3, 0, 524313, 3, 0, 524314, 3, 0, 524315, 3, 0, 524316, 3, 0, 524317, 3, 0, 524318, 3, 0, 524319, 3, 0, 589824, 3, 0, 589825, 3, 0, 589826, 2, 65536, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 3, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 2, 2, 589835, 3, 0, 589836, 2, 65536, 589837, 4, 65536, 589838, 2, 65538, 589839, 2, 65538, 589840, 2, 65538, 589841, 2, 65538, 589842, 2, 65538, 589843, 2, 65538, 589844, 2, 65538, 589845, 4, 65537, 589846, 2, 2, 589847, 3, 0, 589848, 3, 0, 589849, 3, 0, 589850, 3, 0, 589851, 3, 0, 589852, 3, 0, 589853, 3, 0, 589854, 3, 0, 589855, 3, 0, 655360, 3, 0, 655361, 3, 0, 655362, 2, 65536, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 3, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 2, 2, 655371, 3, 0, 655372, 2, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 2, 1, 655383, 3, 0, 655384, 3, 0, 655385, 3, 0, 655386, 3, 0, 655387, 3, 0, 655388, 3, 0, 655389, 3, 0, 655390, 3, 0, 655391, 3, 0, 720896, 3, 0, 720897, 3, 0, 720898, 2, 0, 720899, 4, 1, 720900, 0, 0, 720901, 2, 1, 720902, 3, 0, 720903, 2, 0, 720904, 4, 1, 720905, 4, 0, 720906, 2, 1, 720907, 3, 0, 720908, 3, 0, 720909, 3, 0, 720910, 3, 0, 720911, 3, 0, 720912, 3, 0, 720913, 3, 0, 720914, 3, 0, 720915, 3, 0, 720916, 3, 0, 720917, 3, 0, 720918, 3, 0, 720919, 3, 0, 720920, 3, 0, 720921, 3, 0, 720922, 3, 0, 720923, 3, 0, 720924, 3, 0, 720925, 3, 0, 720926, 3, 0, 720927, 3, 0, 786432, 3, 0, 786433, 3, 0, 786434, 3, 0, 786435, 0, 0, 786436, 0, 0, 786437, 3, 0, 786438, 3, 0, 786439, 3, 0, 786440, 0, 0, 786441, 0, 0, 786442, 3, 0, 786443, 3, 0, 786444, 3, 0, 786445, 3, 0, 786446, 3, 0, 786447, 3, 0, 786448, 3, 0, 786449, 3, 0, 786450, 3, 0, 786451, 3, 0, 786452, 3, 0, 786453, 3, 0, 786454, 3, 0, 786455, 3, 0, 786456, 3, 0, 786457, 3, 0, 786458, 3, 0, 786459, 3, 0, 786460, 3, 0, 786461, 3, 0, 786462, 3, 0, 786463, 3, 0, 851968, 3, 0, 851969, 3, 0, 851970, 2, 131072, 851971, 4, 65537, 851972, 4, 65536, 851973, 2, 131073, 851974, 3, 0, 851975, 2, 131072, 851976, 4, 65537, 851977, 4, 65536, 851978, 2, 131073, 851979, 3, 0, 851980, 3, 0, 851981, 3, 0, 851982, 3, 0, 851983, 3, 0, 851984, 3, 0, 851985, 3, 0, 851986, 3, 0, 851987, 3, 0, 851988, 3, 0, 851989, 3, 0, 851990, 3, 0, 851991, 3, 0, 851992, 3, 0, 851993, 3, 0, 851994, 3, 0, 851995, 3, 0, 851996, 3, 0, 851997, 3, 0, 851998, 3, 0, 851999, 3, 0, 917504, 3, 0, 917505, 3, 0, 917506, 2, 65536, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 2, 2, 917515, 3, 0, 917516, 3, 0, 917517, 3, 0, 917518, 3, 0, 917519, 3, 0, 917520, 3, 0, 917521, 3, 0, 917522, 3, 0, 917523, 3, 0, 917524, 3, 0, 917525, 3, 0, 917526, 3, 0, 917527, 3, 0, 917528, 3, 0, 917529, 3, 0, 917530, 3, 0, 917531, 3, 0, 917532, 3, 0, 917533, 3, 0, 917534, 3, 0, 917535, 3, 0, 983040, 3, 0, 983041, 3, 0, 983042, 2, 65536, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 2, 2, 983051, 3, 0, 983052, 3, 0, 983053, 3, 0, 983054, 3, 0, 983055, 3, 0, 983056, 3, 0, 983057, 3, 0, 983058, 3, 0, 983059, 3, 0, 983060, 3, 0, 983061, 3, 0, 983062, 3, 0, 983063, 3, 0, 983064, 3, 0, 983065, 3, 0, 983066, 3, 0, 983067, 3, 0, 983068, 3, 0, 983069, 3, 0, 983070, 3, 0, 983071, 3, 0, 1048576, 3, 0, 1048577, 3, 0, 1048578, 2, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 2, 1, 1048582, 3, 0, 1048583, 2, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 2, 1, 1048587, 3, 0, 1048588, 3, 0, 1048589, 3, 0, 1048590, 3, 0, 1048591, 3, 0, 1048592, 3, 0, 1048593, 3, 0, 1048594, 3, 0, 1048595, 3, 0, 1048596, 3, 0, 1048597, 3, 0, 1048598, 3, 0, 1048599, 3, 0, 1048600, 3, 0, 1048601, 3, 0, 1048602, 3, 0, 1048603, 3, 0, 1048604, 3, 0, 1048605, 3, 0, 1048606, 3, 0, 1048607, 3, 0, 1114112, 3, 0, 1114113, 3, 0, 1114114, 3, 0, 1114115, 3, 0, 1114116, 3, 0, 1114117, 3, 0, 1114118, 3, 0, 1114119, 3, 0, 1114120, 3, 0, 1114121, 3, 0, 1114122, 3, 0, 1114123, 3, 0, 1114124, 3, 0, 1114125, 3, 0, 1114126, 3, 0, 1114127, 3, 0, 1114128, 3, 0, 1114129, 3, 0, 1114130, 3, 0, 1114131, 3, 0, 1114132, 3, 0, 1114133, 3, 0, 1114134, 3, 0, 1114135, 3, 0, 1114136, 3, 0, 1114137, 3, 0, 1114138, 3, 0, 1114139, 3, 0, 1114140, 3, 0, 1114141, 3, 0, 1114142, 3, 0, 1114143, 3, 0, 1179648, 3, 0, 1179649, 3, 0, 1179650, 3, 0, 1179651, 3, 0, 1179652, 3, 0, 1179653, 3, 0, 1179654, 3, 0, 1179655, 3, 0, 1179656, 3, 0, 1179657, 3, 0, 1179658, 3, 0, 1179659, 3, 0, 1179660, 3, 0, 1179661, 3, 0, 1179662, 3, 0, 1179663, 3, 0, 1179664, 3, 0, 1179665, 3, 0, 1179666, 3, 0, 1179667, 3, 0, 1179668, 3, 0, 1179669, 3, 0, 1179670, 3, 0, 1179671, 3, 0, 1179672, 3, 0, 1179673, 3, 0, 1179674, 3, 0, 1179675, 3, 0, 1179676, 3, 0, 1179677, 3, 0, 1179678, 3, 0, 1179679, 3, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="StartLocation" type="Node2D" parent="."]
position = Vector2( 128, 160 )

[node name="Elevator" parent="." groups=[
"level_objects",
] instance=ExtResource( 5 )]
position = Vector2( 704, 144 )

[node name="Button2" parent="." instance=ExtResource( 6 )]
position = Vector2( 128, 320 )

[node name="Button3" parent="." instance=ExtResource( 6 )]
position = Vector2( 128, 480 )

[node name="Button4" parent="." instance=ExtResource( 6 )]
position = Vector2( 288, 480 )

[node name="Button5" parent="." instance=ExtResource( 6 )]
position = Vector2( 288, 320 )

[node name="Button6" parent="." instance=ExtResource( 6 )]
position = Vector2( 288, 160 )

[node name="Door" parent="." instance=ExtResource( 2 )]
position = Vector2( 128, 400 )

[node name="Door2" parent="." instance=ExtResource( 2 )]
position = Vector2( 288, 400 )

[node name="Door3" parent="." instance=ExtResource( 2 )]
position = Vector2( 288, 240 )

[node name="Door4" parent="." instance=ExtResource( 3 )]
position = Vector2( 208, 480 )

[node name="Door5" parent="." instance=ExtResource( 3 )]
position = Vector2( 368, 160 )
